--- a/assets/test.css
+++ b/assets/test.css
@@ -29,6 +29,8 @@ body, div, p, table, tr, th, td, ul, ol, li, h1, h2, h3, h4, h5 {
 }
 body {
 	font-family: Splatoon2;
+    background: #9b1e09 url('./img/bg-3.png') top;
+    background-size: 510px 255px;
 }
 .rotation-container-app {
 	background: rgb(10, 10, 10) url(./img/bg-1.png) top;
@@ -107,6 +109,16 @@ body {
 						width: 100%;
 						height: auto;
 					}
+#rotations {
+	font-size: 2vw;
+	margin: 1.5em auto;
+	width: max-content;
+}
+@media (min-width: 1000px) {
+	#rotations {
+		font-size: 20px;
+	}
+}
 .rotation-container-game {
 	background: rgb(30, 30, 30) url(./img/bg-4.png) top;
 	background-size: 15em 7em;
@@ -143,7 +155,7 @@ body {
 	}
 	.rotation-container-game .rotation-content {
 		display: flex;
-		padding: 0.85em;
+		padding: 0.85em 0.85em 0;
 	}
 		.rotation-container-game .rotation-stage {
 			font-size: 0.9em;
@@ -189,3 +201,10 @@ body {
 						width: 100%;
 						height: auto;
 					}
+				.rotation-container-game .rotation-weapons .rare-weapon {
+					display: none;
+				}
+
+				.rotation-container-game .rotation-weapons .rare-weapon[rare-id*="70"] {
+					display: list-item;
+				}
